--- a/journal/202212.md
+++ b/journal/202212.md
@@ -509,6 +509,6 @@ Credits (alphabetical order):
 
 
 - writing, editing, publishing: { bee, bochinchero, Exitus, jz, l1ndseymm, phoenixgreen, richardred }
-- reviews and feedback: jholdstock
+- reviews and feedback: davecgh, jholdstock, JoeGruff
 - title image: {}
 - funding: Decred stakeholders
