--- a/journal/202212.md
+++ b/journal/202212.md
@@ -1,16 +1,10 @@
 # {DRAFT} Decred Journal – December 2022
 
-{ _Only remove DRAFT from the title when all other todos are solved, at the very end. Search for `{` to see what's left._ }
-
-{ _Hint: Hints just add context. If it doesn't start with "Hint: ", it is a task. This was a hint._ }
-
-{ _Hint: Read the Guidelines on how to make DJ great: https://github.com/xaur/decred-news/blob/docs/guidelines.md ._}
-
 ![{alt text}](../img/{file.ext} "{hover tooltip text}")
 
 _Image: { "Title by @author. Description..." OR just "Description..." }_
 
-{ _Month's highlights, no links here, 5-7 bullets max._
+December's highlights: {
 
 - Bison Relay launch and initial onboarding.
 
@@ -18,7 +12,7 @@ _Image: { "Title by @author. Description..." OR just "Description..." }_
 
 - Lightning Network node count and capacity increased significantly over Bison Relay launch.
 
-- 
+- any more?
 
 }
 
@@ -35,11 +29,6 @@ Contents: { _Sync ToC at the very end, when all text is finished_ }
 - [Discussions](#discussions)
 - [Markets](#markets)
 - [Relevant External](#relevant-external)
-
-
-## { Some Announcement }
-
-{ _Add individual sections for high-impact announcements, such as consensus votes, software releases, milestones, major bugs, etc._ }
 
 
 ## Bison Relay Launch
