--- a/journal/202212.md
+++ b/journal/202212.md
@@ -44,17 +44,13 @@ Initial release comes with the following features (incomplete list):
 - Commenting on posts
 - News feed with content from users you are subscribed to
 - Relaying (reposting) content
-- Connecting with other users via invite files sent over existing channel, or via Bison Relay directly (your existing contacts connect you with their contacts)
-  - { do mediated key exchanges work already? }
+- Connecting with other users via invite files sent over existing channel, or via Bison Relay directly (your existing contacts connect you with their contacts, aka mediated key exchange)
 - Sending and receiving DCR tips via Decred Lightning Network
-- Sharing files with optional cost that users pay for access
-  - { someone please check/expand this, e.g. does the "access cost" go to the server or to the poster? }
+- Sharing files with optional price that users pay for access
 - Creating and paying invoices
-- Payments to the server for sending and receiving messages
 - GUI and command-line apps for Linux, macOS and Windows
-- { anything else to note here? }
 
-{ estimate how cheap it is to use BR }
+Payments for sending and receiving messages serve as anti-spam protection but Bison Relay is cheap to use, 0.1 DCR could last months for regular chatting.
 
 Most users will want to download the GUI app [here](https://github.com/companyzero/bisonrelay/releases), get the fille named `bisonrelay-xxx` for your operating system. The downloads have no hashes or signatures yet but those will be added in the [future](https://matrix.to/#/!aNnAOHkWUdNcEXRGjJ:decred.org/$cSc9OmuvOLz-G4VsDQfSBDUrORHOizZqpQK9w6kHSaM?via=decred.org&via=matrix.org&via=planetdecred.org).
 
@@ -78,8 +74,6 @@ To understand the motivation to create Bison Relay check the posts by @jy-p:
 - Twitter [announcement](https://twitter.com/behindtext/status/1603470873503141903)
 
 > The inference is that Decred should attempt to grow its network without conventional marketing. The path forward is not through, but around.
-
-{ get some onboarding stats }
 
 
 ## DCRDEX v0.5.8 Release
