Dev drop some todos

--- a/journal/202212.md
+++ b/journal/202212.md
@@ -93,8 +93,8 @@ The work reported below has the "merged to master" status unless noted otherwise
 _[dcrd](https://github.com/decred/dcrd) is a full node implementation that powers Decred's peer-to-peer network around the world._
 
 - Always serve known filters when peers ask for it with [`getcfilterv2`](https://github.com/decred/dcrd/pull/3035) request. Previously, a node would not serve the filters until its chain was fully synced with the network. This limitation was inherited from the old bloom filters logic, where it helped to avoid performance drops, especially during the initial chain sync. The downside is that the node could appear to be unresponsive or stalled in a variety of production and testing scenarios. The bloom filters have been replaced by version 2 filters and they are relatively cheap to serve now, so the node can always respond to `getcfilterv2` requests, even before the chain is fully synced.
-- Updated JSON-RPC API [documentation](https://github.com/decred/dcrd/pull/3032) for methods used for discovering transactions matching certain criteria: `loadtxfilter`, `notifynewtransactions`, and `rescan`. Information for removed API methods and notification has been [removed](https://github.com/decred/dcrd/pull/3034) { also 3033 }.
-- Smaller changes and cleanup { 3036 3037 3038 3040 3041 }
+- Updated JSON-RPC API [documentation](https://github.com/decred/dcrd/pull/3032) for methods used for discovering transactions matching certain criteria: `loadtxfilter`, `notifynewtransactions`, and `rescan`. Information for removed API methods and notification has been [removed](https://github.com/decred/dcrd/pull/3034).
+- Smaller changes and cleanup.
 
 
 ### dcrwallet
@@ -146,7 +146,7 @@ _[DCRDEX](https://github.com/decred/dcrdex) is a non-custodial, privacy-respecti
 
 Ethereum:
 
-- Added client and server support for swaps with [testnet USDC](https://github.com/decred/dcrdex/pull/1733). One review comment reminds to treat [floating point math](https://github.com/decred/dcrdex/pull/1733#issuecomment-1303491236) with great care. { dig 1733 for more notes }
+- Added client and server support for swaps with [testnet USDC](https://github.com/decred/dcrdex/pull/1733). One review comment reminds to treat [floating point math](https://github.com/decred/dcrdex/pull/1733#issuecomment-1303491236) with great care.
 - Added ability for DEX client and server to connect over [authenticated WebSocket](https://github.com/decred/dcrdex/pull/1963) to a Geth full node. This allows to run Geth on a separate machine.
 
 Fidelity bonds (client):
@@ -166,13 +166,8 @@ Other client changes:
 - Added [Arabic translation](https://github.com/decred/dcrdex/pull/1898) and the required tweaks for showing right-to-left text.
 - Fixed SPV wallet [log file deletion](https://github.com/decred/dcrdex/pull/1946) during wallet recovery.
 - Fixed [fiat value](https://github.com/decred/dcrdex/pull/1983) on the Send form not including the transaction fee.
-- Fixed crash with [empty config](https://github.com/decred/dcrdex/pull/2000) value. { _may group, pretty sure it affected no releases_ }
 - Fixed handling of the [Pre-size Funds](https://github.com/decred/dcrdex/pull/1988) option. This option creates an extra "split transaction" to prepare an exact amount of funds needed for the order, which avoids locking more funds than needed, but at the cost of additional fees to pay for the split. The fix avoids the pre-sizing transaction when there is no benefit. Also, the UX is made more consistent by always showing the option but explaining why it was turned off. Finally, another fix disables pre-sizing for [immediate market orders](https://www.investopedia.com/terms/i/immediateorcancel.asp) since they must execute quickly.
-
-Other:
-
-- Updated [build config](https://github.com/decred/dcrdex/pull/1979). { _minor_ }
-- Smaller fixes { 1995 }
+- Other fixes.
 
 ![](https://user-images.githubusercontent.com/9373513/207747259-67e5dab5-0db6-48b1-9f70-e0bdc12ad25d.png) { _upload_ }
 
@@ -188,7 +183,7 @@ _[dcrdata](https://github.com/decred/dcrdata) is an explorer for Decred blockcha
 - Removed the requirement to run dcrd with address index enabled because it was [removed from dcrd](https://github.com/decred/dcrd/pull/2930). Usage of dcrd's `searchrawtransactions` method (which depends on the address index) was removed in favor of dcrdata's own database that has all the necessary information.
 - Added two fields to the [transaction data API](https://github.com/decred/dcrdata/pull/1946): `tree` (Decred blocks store transactions in regular and stake trees) and `type` (Decred transactions can be `regular`, `ticket`, `vote`, `revocation`, `coinbase`, `treasurybase`, `treasury add`, `treasury spend`).
 - Fixed a rare bug where [disapproved transactions](https://docs.decred.org/governance/overview/#block-voting) that were later included in an approved block had their outputs [incorrectly shown as unspent](https://github.com/decred/dcrdata/pull/1938). Less than 20 transactions were affected in the entire chain history.
-- Smaller fixes { 1941 1935 } and UI tweaks { 1944 1942 1947 }.
+- Other fixes and UI tweaks.
 
 ![](https://user-images.githubusercontent.com/57448127/174891778-22ed05a0-7ced-447c-b3ef-28840d2d22a6.png) { _replace with better image, upload_ }
 
