--- a/journal/202212.md
+++ b/journal/202212.md
@@ -192,17 +192,19 @@ _Image: dcrdata, now it is easier to track TSpend voting progress._
 
 ### Bison Relay
 
-_[Bison Relay](https://github.com/companyzero/bisonrelay) is the new peer-to-peer social media platform with strong protections against censorship, surveillance, and advertising, powered by Decred Lightning Network._
+_[Bison Relay](https://github.com/companyzero/bisonrelay) is a new peer-to-peer social media platform with strong protections against censorship, surveillance, and advertising, powered by Decred Lightning Network._
+
+Bison Relay has been revealed after 2 years of initial [development](https://blog.decred.org/2022/12/14/Bison-Relay-The-Sovereign-Internet/) by Company 0. End-user details can be found in the [announcement](#bison-relay-launch) above, while here we will focus on the tech and recent changes in the source.
 
 Bison Relay tech stack overview:
 
-- [Server]({ code }): Go, PostgreSQL, { more? }
-- [Command-line client]({ code }): Go, { more? }
-- [GUI client]({ code }): Go, Flutter, { more? }
-
-{ tech stack overview for each app + Flutter cross-platform + Flutter's potential to build for mobile }
-
-Initial [v0.1.0](https://github.com/companyzero/bisonrelay/releases/tag/v0.1.0) has been released on December 15th with the following features { link ann section }.
+- [Server](https://github.com/companyzero/bisonrelay#server) is written in Go and uses PostgreSQL for storage.
+- [Command-line client](https://github.com/companyzero/bisonrelay#cli-client) is written in Go and implements [text-based UI](https://en.wikipedia.org/wiki/Text-based_user_interface) similar to Irssi or WeeChat.
+- [GUI client](https://github.com/companyzero/bisonrelay/tree/master/bruig): is a cross-platform app written in Dart, Flutter and a Go library implementing the Bison Relay protocol. [Flutter](https://flutter.dev) is a promising platform for building cross-platform GUI apps for major desktop (Linux, macOS, Windows) and mobile (Android, iOS) systems from a single codebase.
+- All client to server communications are double encrypted using a TLS tunnel as
+the outer layer and `NaCl secretbox` as the inner layer.
+- All client to client communications are encrypted with a [double ratchet](https://signal.org/docs/specifications/doubleratchet/) (a third layer of encryption) with keys that only the clients have.
+- More details can be found in the [docs dir](https://github.com/companyzero/bisonrelay/tree/39015e62770ae6b18e73599a6fe497ceec463047/doc) and the [protocol overview](https://github.com/companyzero/bisonrelay/blob/39015e62770ae6b18e73599a6fe497ceec463047/rpc/README.md#protocol).
 
 GUI app, changes released in [v0.1.1](https://github.com/companyzero/bisonrelay/releases/tag/v0.1.1):
 
@@ -210,14 +212,14 @@ GUI app, changes released in [v0.1.1](https://github.com/companyzero/bisonrelay/
 - Fixed user getting [stuck](https://github.com/companyzero/bisonrelay/pull/21) after an unfinished seed setup and added a choice to [delete](https://github.com/companyzero/bisonrelay/pull/42) an unfinished wallet.
 - Fixed unreadable font color in [server fingerprints](https://github.com/companyzero/bisonrelay/pull/21).
 - Fixed hitting a [gap limit](https://github.com/companyzero/bisonrelay/pull/39) when opening LN channels.
-- Other fixes { 40 43#35 }.
+- Other fixes.
 
 Changes in `master` towards next release, GUI app:
 
 - Added save/restore of unsent [message draft](https://github.com/companyzero/bisonrelay/pull/43) when changing to/from another view.
 - Added [seed restore](https://github.com/companyzero/bisonrelay/pull/58) page.
 - Added a button to [copy seed](https://github.com/companyzero/bisonrelay/pull/58) to clipboard.
-- Added support for saving and restoring [Static Channel Backup]({ dcrdocs link }) (SCB) files. Funds locked in LN channels cannot be recovered from wallet seed alone. Recovery data that cannot be generated from the seed is stored in SCB files.
+- Added support for saving and restoring [Static Channel Backup](https://docs.decred.org/lightning-network/backups/) (SCB) files. Funds locked in LN channels cannot be recovered from wallet seed alone. Recovery data that cannot be generated from the seed is stored in SCB files.
 - Changed [window title](https://github.com/companyzero/bisonrelay/pull/64) to "Bison Relay.
 
 GUI app, improved onboarding:
@@ -248,15 +250,6 @@ Website December changes:
 Future plans for Bison Relay have been [announced](https://www.youtube.com/watch?v=K6Cu4Gi7Lp0&t=47s) on BR itself:
 
 > we're designing the next set of features for br, which include the ability to have some sort of "pages", for both content and as store front. The current iteration of this feature is that a client can provide "pages" that other key-exchanged clients can view and interact in some way. \[@jy-p on 2022-12-18\]
-
-{ read BR chats for more insight }
-
-
-### Other
-
-- { _Smaller/common things go here._ }
-
-{ _More exotic dev sources:_ https://github.com/xaur/decred-news/blob/docs/sources.md#development }
 
 
 ## People
