--- a/journal/202212.md
+++ b/journal/202212.md
@@ -16,8 +16,10 @@ December's highlights: {
 
 }
 
-Contents: { _Sync ToC at the very end, when all text is finished_ }
+Contents:
 
+- [Bison Relay Launch](#bison-relay-launch)
+- [DCRDEX v0.5.8 Release](#dcrdex-v058-release)
 - [Development](#development)
 - [People](#people)
 - [Governance](#governance)
@@ -26,7 +28,6 @@ Contents: { _Sync ToC at the very end, when all text is finished_ }
 - [Outreach](#outreach)
 - [Events](#events)
 - [Media](#media)
-- [Discussions](#discussions)
 - [Markets](#markets)
 - [Relevant External](#relevant-external)
 
