--- a/journal/202212.md
+++ b/journal/202212.md
@@ -45,7 +45,7 @@ Initial release comes with the following features (incomplete list):
 - Commenting on posts
 - News feed with content from users you are subscribed to
 - Relaying posts (reposting)
-- Connecting with other users via invite files sent over existing channel, or via Bison Relay directly (your existing contacts connect you with their contacts, aka mediated key exchange)
+- Connecting with other users via invite files sent over an existing channel, or via Bison Relay directly (your existing contacts connect you with their contacts, aka mediated key exchange)
 - Sending and receiving DCR tips via Decred Lightning Network
 - Sharing files with optional price that users pay for access
 - Creating and paying invoices
@@ -79,7 +79,7 @@ To understand the motivation behind Bison Relay check the posts by @jy-p:
 
 ## DCRDEX v0.5.8 Release
 
-This release fixes issues with requesting fiat rates from external sources, and adds options for advanced command-line and Go API users that allow to skip time consuming operations on startup and shutdown.
+This release fixes issues with requesting fiat rates from external sources, and adds options for advanced command-line and Go API users that allow skipping time consuming operations on startup and shutdown.
 
 v0.5.8 is available as a standalone DEX app [here](https://github.com/decred/dcrdex/releases).
 
@@ -113,7 +113,7 @@ _[dcrwallet](https://github.com/decred/dcrwallet) is a wallet server used by com
 _[Decrediton](https://github.com/decred/decrediton) is a full-featured desktop wallet app with integrated voting, StakeShuffle mixing, Lightning Network, DEX trading, and more. It runs with or without a full blockchain (SPV mode)._
 
 - Updated DCRDEX module to v0.5.7 which fixes several edge cases around [order cancellation](https://github.com/decred/decrediton/pull/3840).
-- Introduced voting for [individual TSpends](https://github.com/decred/decrediton/pull/3787). If any tickets are managed by VSPs, changing ticket vote preferences will be sent to the VSPs. If new unvoted TSpends are detected, a notification will be shown on the home page. Existing voting policies for treasury keys and individual TSpends will be shown on ticket details page.
+- Introduced voting for [individual TSpends](https://github.com/decred/decrediton/pull/3787). If any tickets are managed by VSPs, changed ticket vote preferences will be sent to the VSPs. If new unvoted TSpends are detected, a notification will be shown on the home page. Existing voting policies for treasury keys and individual TSpends will be shown on ticket details page.
 - Expanded automated UI test coverage.
 
 ![](https://user-images.githubusercontent.com/52497040/180845615-8b64fa03-a1cd-4f55-9de4-a5e64f42c6df.png) { _upload_ }
@@ -150,18 +150,18 @@ Changes below are merged in `master` towards future releases.
 Ethereum:
 
 - Added client and server support for swaps with [testnet USDC](https://github.com/decred/dcrdex/pull/1733).
-- Added ability for DEX client and server to connect over [authenticated WebSocket](https://github.com/decred/dcrdex/pull/1963) to a Geth full node. This allows to run Geth on a separate machine.
+- Added ability for DEX client and server to connect over [authenticated WebSocket](https://github.com/decred/dcrdex/pull/1963) to a Geth full node. This allows users to run Geth on a separate machine.
 
 Fidelity bonds (client):
 
 - Third batch of [fidelity bonds](https://github.com/decred/dcrdex/pull/1820) implementation was merged, building on the lower-level API and server code added in October and November. This batch adds internal client code to create, store, post, confirm, and refund the bonds, as well as `dexc` app command for posting bond from the command line. Bonds implementaion was split into phases to make review feasible and progress in parallel with multiple other developments. Up next is account tier maintenance, bond renewal, settings, and UI components.
 - Documented bonds in the [spec](https://github.com/decred/dcrdex/pull/1994).
-- For a recap, time-locked [fidelity bonds](https://en.wikipedia.org/wiki/Fidelity_bond) will replace the current registration fee system. Users will lock coins in bonds and gain permissions to trade, as long as their bond tier is high enough (possibly compensating for poor trading behavior like cancelling orders too much). When trading is no longer needed the bond can be redeemed to get the coins back. Bonds system is a prerequisite for building a [server mesh](https://github.com/decred/dcrdex/issues/1765).
+- For a recap, time-locked [fidelity bonds](https://en.wikipedia.org/wiki/Fidelity_bond) will replace the current registration fee system. Users will lock coins in bonds and gain permissions to trade, as long as their bond tier is high enough (possibly compensating for poor trading behavior like cancelling orders too much). When trading access is no longer needed the bond can be redeemed to get the coins back. The bonds system is a prerequisite for building a [server mesh](https://github.com/decred/dcrdex/issues/1765).
 
 Other client changes:
 
 - Refactored [login sequence](https://github.com/decred/dcrdex/pull/1903) to better handle multiple login attempts and avoid repeating intialization steps. Added a warning prompting to unlock the wallets ASAP to process active trades.
-- Refactored [fee estimation](https://github.com/decred/dcrdex/pull/1967) common for Bitcoin-like assets and added external fee estimator for DOGE. External fee estimation is useful as a fallback for SPV (light) wallets and also RPC (full) wallets that have been started recently and their fee estimation has not calibrated yet.
+- Refactored [fee estimation](https://github.com/decred/dcrdex/pull/1967) common for Bitcoin-like assets and added external fee estimator for DOGE. External fee estimation is useful as a fallback for SPV (light) wallets and also RPC (full) wallets that have been started recently when their fee estimation has not calibrated yet.
 - Added [default values](https://github.com/decred/dcrdex/pull/1981) for wallets created over RPC. This is to assist testing on simnet.
 - Moved more strings [translation files](https://github.com/decred/dcrdex/pull/1980).
 - Database [compaction](https://github.com/decred/dcrdex/pull/1987) tuned to more aggressively free up space and report the savings more accurately.
@@ -174,7 +174,7 @@ Other client changes:
 
 ![](https://user-images.githubusercontent.com/9373513/207747259-67e5dab5-0db6-48b1-9f70-e0bdc12ad25d.png) { _upload_ }
 
-_Image: First trading between USDC and DCR on testnet._
+_Image: First trade between USDC and DCR on testnet._
 
 
 ### dcrdata
@@ -339,7 +339,7 @@ Decred's [Lightning Network](https://ln-map.jholdstock.uk/) explorer is back up 
 
 ## Ecosystem
 
-The VSP vspd.synergy-crypto.net has been [removed](https://github.com/decred/dcrwebapi/pull/172) from the API after voting the remaining live tickets. It had been serving since June 2021 and voted a total of 892 tickets. The shutdown was executed cleanly: it stopped accepting new tickets in August 2022 and over the next 4 months all live tickets had been voted.
+The VSP vspd.synergy-crypto.net has been [removed](https://github.com/decred/dcrwebapi/pull/172) from the API after voting its remaining live tickets. It had been serving since June 2021 and voted a total of 892 tickets. The shutdown was executed cleanly: it stopped accepting new tickets in August 2022 and over the next 4 months all live tickets have voted.
 
 Poloniex has re-enabled the DCR/BTC market which was frozen since Sep 30 when the exchange [tweeted](https://twitter.com/PoloSupport/status/1575745498933522432) that the DCR wallet is still on maintenance (since January 2022). The market was first re-enabled on Nov 28 but was quickly frozen again for another week until being fully restored on Dec 5.
 
@@ -451,29 +451,29 @@ In November, plans to outlaw privacy-enhancing crypto coins in the EU were [leak
 
 In Brazil, Congress has [passed](https://decrypt.co/116011/brazil-crypto-payments) a bill to regulate crypto payments, it will allow banks to offer services around crypto assets, and also covers things like airline points.
 
-Sia launched a community grants program in September, and provided an [update](https://blog.sia.tech/grants-program-update-november-2022-83dd4a7e266e) in November. There is a small panel which reviews proposals and so far they have approved two proposals - Lume Web aims to "use Skynet to enable Sia to act as the internet", is getting $80K, and Sia Satellite, which will allow people to pay to use Sia storage with a credit card, $26K. In December another [update](https://blog.sia.tech/grants-program-update-december-2022-f7be5f103d13) reported that Fabstir's proposal had been approved for $40K, and plans to collaborate with Lume Web on other aspects of the "web3 platform", like social media for the creator economy with sales and tipping. The other two proposals have been rejected, but with an option to edit and re-submit.
-
-The Osmosis DAO (Osmosis is a major DeFi platform on Cosmos) looked back on [2022](https://osmosis.zone/blog/osmosis-2022-retrospective). There were 278 [proposals](https://www.mintscan.io/osmosis/proposals), of which 26 were rejected, so 90% of proposals passed. One of the highlights appears to have been "superfluid staking" (otherwise known as "reverse liquid staking)", which allows liquidity providers to bond the tokens they get such that the underlying OSMO can be staked to contribute to securing the blockchain. Initially voting rights were delegated along with stake to the staker's choice of validator, but a successful governance [proposal](https://www.mintscan.io/osmosis/proposals/252) subsequently allowed LP stakers to override the votes of their chosen validator. Osmosis voters also [approved](https://www.mintscan.io/osmosis/proposals/186) a community grants proposal with a budget of 1.5M OSMO for 6 months and the entity running the program receiving $70K/month on top of an initial $100K - the program was [renewed](https://www.mintscan.io/osmosis/proposals/362) in November.
-
-ConsenSys faced a [backlash](https://www.coindesk.com/tech/2022/11/24/ethereum-software-firm-consensys-reveals-it-collects-user-data/) over an update to its privacy policy in November, with users objecting to the collection of IP address information through RPC provider Infura and linking this to addresses and account balances. A [response](https://uk.finance.yahoo.com/news/consensys-metamask-crypto-wallet-response-130000872.html) from ConsenSys in December clarified that they only collect data for "write" events (like making a transaction) and not when the user merely checks their balances, and that they have been doing this since 2018. They pledged to no longer store the IP data alongside the account access data, and to make it easier for users to change RPC provider through the interface.
-
-The Grayscale Bitcoin Trust has been [puzzling](https://seekingalpha.com/article/4563283-grayscale-bitcoin-trust-rating-upgrade) and spooking some investors, as its "discount to NAV" (price of a share of the trust vs the value of the amount of Bitcoin one share represents) [increased](https://ycharts.com/companies/GBTC/discount_or_premium_to_nav) to a whopping 45%. In Summer 2022 Grayscale's application to convert the fund to an ETF was denied, so it is presently stuck in a position where investors cannot claim the BTC their shares entitle them to, although this decision is under appeal. Grayscale is owned by the Digital Currency Group, which also owns [troubled](https://www.forbes.com/sites/dereksaul/2023/01/05/crypto-broker-genesis-cuts-30-of-staff-reportedly-mulls-bankruptcy/) crypto lender Genesis, which had to suspend its operations in the wake of FTX's collapse, and in January cut 30% of its workforce. The Digital Currency Group owns many [companies](https://dcg.co/portfolio/) in the crypto space, and there has been some speculation about which of these they might sell to bail out the struggling ones. Their holdings include CoinDesk, which broke the story about FTX which triggered the present difficulties for DCG. The cryptocurrency holdings of DCG have been the subject of some controversy, as Grayscale's [refusal](https://cryptopotato.com/grayscale-says-no-to-proof-of-reserves/) to participate in providing "Proof of Reserves" was one of the factors which caused suspicion initially - although Coinbase has stepped up to [vouch](https://www.cryptopolitan.com/coinbase-clears-about-grayscale-reserves) for their assets being safely held.
-
-It has been a [tough year](https://www.forbes.com/sites/colinharper/2022/12/23/bitcoin-mining-in-2022-the-year-boom-turned-to-bust/) for Bitcoin miners, and in particular the Northern American industry which grew rapidly fuelled by cheap credit in 2021 and lured in by the gap left when China banned PoW mining. As the price of BTC declined by 63% in 2022 the industry was becoming more competitive, leading to a 70% drop in mining profitability. As the problems became clear the value of top mining machines declined 85% and the value of shares for the mining companies fell from between 80-98%. In December Core Scientific, one of the largest US crypto miners, has [filed](https://bitcoinmagazine.com/legal/bitcoin-miner-core-scientific-bankruptcy) for bankruptcy.
-
 Avraham Eisenberg, the front man who took public credit for the "highly profitable trading strategy" which drained Mango Markets of $110 million, has been [arrested](https://decrypt.co/118045/mango-markets-attacker-avraham-eisenberg-arrested-charged-with-market-manipulation-offenses) and charged with market manipulation offences.
 
 SBF was charged with a number of offences and agreed to be [extradited](https://cointelegraph.com/news/sbf-signs-extradition-papers-set-to-return-to-face-charges-in-the-us) to the US, where he was granted bail on a $250 million bond on the condition that he stay at his parents' house. The names of some wealthy associates who covered part of the bond have been kept [secret](https://decrypt.co/118298/sbf-keep-bail-bond-cosigners-secret-like-lawyers-for-ghislaine-maxwell), unusually. The trial is scheduled to start in October 2023.
 
 Popular crypto news and research providers The Block were [revealed](https://twitter.com/fintechfrank/status/1601295493102911488) to be secretly bankrolled by SBF through Alameda, it looks like three loans were made to Block CEO McCaffrey, one of which was used [buy](https://www.axios.com/2022/12/09/bankman-fried-funded-crypto-news-site-block) an apartment in the Bahamas. It appears that none of the Block's editorial staff were aware of the arrangement between SBF and McCaffrey, who has now resigned.
 
-The Balancer DAO community [agreed](https://decrypt.co/117590/how-balancer-dao-achieved-peace-with-a-clever-whale-named-humpy) to a [peace treaty](https://forum.balancer.fi/t/bip-128-peace-treaty/4128) with the veBAL (Balancer's governance token) whale who came to be known as Humpy. Humpy is the largest BAL holder and liquidity provider, and used their voting power to dominate Balancer's governance and increase the yield rates for the liquidity pools they were personally using. Balancer developers and the community mobilised to mitigate Humpy's self-dealing but Humpy was still able to extract significant profit by pointing BAL rewards to pools they created with high fee levels. The peace treaty was approved almost unanimously by the veBAL community in a token vote, Humpy agreed to not increase their BAL position any further and to unwind much of it, with assistance from community members to organise OTC trades.
+The Grayscale Bitcoin Trust has been [puzzling](https://seekingalpha.com/article/4563283-grayscale-bitcoin-trust-rating-upgrade) and spooking some investors, as its "discount to NAV" (price of a share of the trust vs the value of the amount of Bitcoin one share represents) [increased](https://ycharts.com/companies/GBTC/discount_or_premium_to_nav) to a whopping 45%. In Summer 2022 Grayscale's application to convert the fund to an ETF was denied, so it is presently stuck in a position where investors cannot claim the BTC their shares entitle them to, although this decision is under appeal. Grayscale is owned by the Digital Currency Group, which also owns [troubled](https://www.forbes.com/sites/dereksaul/2023/01/05/crypto-broker-genesis-cuts-30-of-staff-reportedly-mulls-bankruptcy/) crypto lender Genesis, which had to suspend its operations in the wake of FTX's collapse, and in January cut 30% of its workforce. The Digital Currency Group owns many [companies](https://dcg.co/portfolio/) in the crypto space, and there has been some speculation about which of these they might sell to bail out the struggling ones. Their holdings include CoinDesk, which broke the story about FTX which triggered the present difficulties for DCG. The cryptocurrency holdings of DCG have been the subject of some controversy, as Grayscale's [refusal](https://cryptopotato.com/grayscale-says-no-to-proof-of-reserves/) to participate in providing "Proof of Reserves" was one of the factors which caused suspicion initially - although Coinbase has stepped up to [vouch](https://www.cryptopolitan.com/coinbase-clears-about-grayscale-reserves) for their assets being safely held.
 
-DFINITY Foundation [announced](https://finance.yahoo.com/news/internet-computer-brings-smart-contract-130000045.html) the launch of a Bitcoin integration with the Internet Computer (IC), with IC serving as a layer 2 for Bitcoin without a centralised bridge.
+It has been a [tough year](https://www.forbes.com/sites/colinharper/2022/12/23/bitcoin-mining-in-2022-the-year-boom-turned-to-bust/) for Bitcoin miners, and in particular the Northern American industry which grew rapidly fuelled by cheap credit in 2021 and lured in by the gap left when China banned PoW mining. As the price of BTC declined by 63% in 2022 the industry was becoming more competitive, leading to a 70% drop in mining profitability. As the problems became clear the value of top mining machines declined 85% and the value of shares for the mining companies fell from between 80-98%. In December Core Scientific, one of the largest US crypto miners, has [filed](https://bitcoinmagazine.com/legal/bitcoin-miner-core-scientific-bankruptcy) for bankruptcy.
 
 The US Federal Reserve is gearing up to [unleash](https://www.federalreserve.gov/paymentsystems/fednow_about.htm) "FedNow" in May-July 2023, a version of the digital dollar for depository institutions which their clients will be able to access and use directly for instant processing and settlement 24/7 hours a day 365 days a year. This is distinct from any retail-facing CBDC, which is so far not being actively planned in the US but some experiments have taken place.
 
 The Bank of England actively [seeking](https://www.cityam.com/bank-of-england-ramps-up-cbdc-ambitions-after-offering-200000-wallet-contract-to-bidders/) applications from companies to build a prototype mobile wallet app, merchant website and back-end server for the core ledger - and offering a budget of £200,000 for the winning entry.
+
+ConsenSys faced a [backlash](https://www.coindesk.com/tech/2022/11/24/ethereum-software-firm-consensys-reveals-it-collects-user-data/) over an update to its privacy policy in November, with users objecting to the collection of IP address information through RPC provider Infura and linking this to addresses and account balances. A [response](https://uk.finance.yahoo.com/news/consensys-metamask-crypto-wallet-response-130000872.html) from ConsenSys in December clarified that they only collect data for "write" events (like making a transaction) and not when the user merely checks their balances, and that they have been doing this since 2018. They pledged to no longer store the IP data alongside the account access data, and to make it easier for users to change RPC provider through the interface.
+
+Sia launched a community grants program in September, and provided an [update](https://blog.sia.tech/grants-program-update-november-2022-83dd4a7e266e) in November. There is a small panel which reviews proposals and so far they have approved two proposals - Lume Web aims to "use Skynet to enable Sia to act as the internet", is getting $80K, and Sia Satellite, which will allow people to pay to use Sia storage with a credit card, $26K. In December another [update](https://blog.sia.tech/grants-program-update-december-2022-f7be5f103d13) reported that Fabstir's proposal had been approved for $40K, and plans to collaborate with Lume Web on other aspects of the "web3 platform", like social media for the creator economy with sales and tipping. The other two proposals have been rejected, but with an option to edit and re-submit.
+
+The Osmosis DAO (Osmosis is a major DeFi platform on Cosmos) looked back on [2022](https://osmosis.zone/blog/osmosis-2022-retrospective). There were 278 [proposals](https://www.mintscan.io/osmosis/proposals), of which 26 were rejected, so 90% of proposals passed. One of the highlights appears to have been "superfluid staking" (otherwise known as "reverse liquid staking)", which allows liquidity providers to bond the tokens they get such that the underlying OSMO can be staked to contribute to securing the blockchain. Initially voting rights were delegated along with stake to the staker's choice of validator, but a successful governance [proposal](https://www.mintscan.io/osmosis/proposals/252) subsequently allowed LP stakers to override the votes of their chosen validator. Osmosis voters also [approved](https://www.mintscan.io/osmosis/proposals/186) a community grants proposal with a budget of 1.5M OSMO for 6 months and the entity running the program receiving $70K/month on top of an initial $100K - the program was [renewed](https://www.mintscan.io/osmosis/proposals/362) in November.
+
+The Balancer DAO community [agreed](https://decrypt.co/117590/how-balancer-dao-achieved-peace-with-a-clever-whale-named-humpy) to a [peace treaty](https://forum.balancer.fi/t/bip-128-peace-treaty/4128) with the veBAL (Balancer's governance token) whale who came to be known as Humpy. Humpy is the largest BAL holder and liquidity provider, and used their voting power to dominate Balancer's governance and increase the yield rates for the liquidity pools they were personally using. Balancer developers and the community mobilised to mitigate Humpy's self-dealing but Humpy was still able to extract significant profit by pointing BAL rewards to pools they created with high fee levels. The peace treaty was approved almost unanimously by the veBAL community in a token vote, Humpy agreed to not increase their BAL position any further and to unwind much of it, with assistance from community members to organise OTC trades.
+
+DFINITY Foundation [announced](https://finance.yahoo.com/news/internet-computer-brings-smart-contract-130000045.html) the launch of a Bitcoin integration with the Internet Computer (IC), with IC serving as a layer 2 for Bitcoin without a centralised bridge.
 
 Donald Trump [launched](https://www.bbc.co.uk/news/business-63995563) his own NFT collection, selling 45,000 "trading card" images showing him dressed in various costumes for $99 each. The NFTs were all minted within 24 hours and it was a popular NFT collection to trade initially, the floor price on the secondary increased to over $200. The NFTs would entitle holders to access certain Trump-related activities, and these passes are in [Jan](https://decrypt.co/119055/nft-zoom-call-donald-trump-selling-under-25) being airdropped to holders, but are not proving as lucrative to trade, with tokenized tickets to access group Zoom calls with the Donald changing hands for less than $25 a piece.
 
