--- a/journal/202212.md
+++ b/journal/202212.md
@@ -6,15 +6,9 @@ _Image: { "Title by @author. Description..." OR just "Description..." }_
 
 December's highlights: {
 
-- Bison Relay launch and initial onboarding.
-
-- DCRDEX v0.5.8 release with new advanced options.
-
-- Lightning Network node count and capacity increased significantly over Bison Relay launch.
-
-- any more?
-
-}
+- Bison Relay was introduced and launched, this innovative privacy-enhancing and spam-resistant messaging network uses Decred Lightning Network to attach costs to messages and deter spam, and is now open for use.
+- The Lightning Network node count and capacity increased significantly following Bison Relay launch, as new users opened channels and started paying for messages.
+- DCRDEX v0.5.8 was released with new advanced options.
 
 Contents:
 
