--- a/journal/202212.md
+++ b/journal/202212.md
@@ -1,10 +1,10 @@
-# {DRAFT} Decred Journal – December 2022
+# Decred Journal – December 2022
 
 ![](../img/202212.1.768.png)
 
 _Image: Bison Relay artwork by @saender_
 
-December's highlights: {
+December's highlights:
 
 - Bison Relay was introduced and launched, this innovative privacy-enhancing and spam-resistant messaging network uses Decred Lightning Network to attach costs to messages and deter spam, and is now open for use.
 - The Lightning Network node count and capacity increased significantly following Bison Relay launch, as new users opened channels and started paying for messages.
@@ -483,7 +483,7 @@ Most information from third parties is relayed directly from the source after a 
 Credits (alphabetical order):
 
 
-- writing, editing, publishing: { bee, bochinchero, Exitus, jz, l1ndseymm, phoenixgreen, richardred }
+- writing, editing, publishing: bee, bochinchero, Exitus, jz, l1ndseymm, phoenixgreen, richardred
 - reviews and feedback: davecgh, jholdstock, JoeGruff
 - title image: saender
 - funding: Decred stakeholders
