add some rel ext

--- a/journal/202301.md
+++ b/journal/202301.md
@@ -471,35 +471,39 @@ In January DCR was trading between USDT {n.nn}-{n.nn} and BTC { five decimals }-
 
 }
 
+Polkadot is planning to [transform](https://polkadot.network/blog/lets-talk-polkadot-opengov-part-i) its governance, aiming to improve the level of decentralization and community participation. Presently a Council is elected by token holders and appoints a Technical Committee of protocol experts, these bodies serve pivotal roles in Polkadot's governance. The new system will dissolve the Council and Committee roles. Some of their functions will be performed by community members directly, proposals will be submitted to different tracks depending on what they do, and the tracks will have their own approval thresholds and time frames, with an automated process to determine when voting starts and stops and which proposals are activated first. A "Substrate Fellowship" will take on the responsibility for assuring code quality for upgrades, but at 100+ members this will be a much larger group than the Technical Committee. The new governance system will also enable more flexible delegation of voting power, on a per proposal type basis.
 
+Polkadot's Web3 Foundation has [tweeted](https://twitter.com/Web3foundation/status/1618550186166620161) out its argument for why the DOT token is no longer a security, [explaining](https://cointelegraph.com/news/polkadot-restates-its-case-that-dot-has-morphed-away-from-security-status) the efforts they have taken to comply with US securities laws and announcing in Nov 2022 that DOT was able to morph into something which was no longer a security.
 
-* Ooki DAO default judgment https://twitter.com/UTAMore/status/1615754093405798403?s=20
+It looks like Ooki DAO is [set](https://cointelegraph.com/news/ooki-dao-misses-lawsuit-response-deadline-default-judgment-on-the-cards) to lose its case with the CFTC in a default judgment because nobody stepped up to represent the DAO by the deadline of Jan 11. So far CFTC has established that it can [serve](https://cointelegraph.com/news/judge-orders-cftc-to-serve-ooki-dao-founders-with-lawsuit) a DAO papers by posting it on their forum/discord as long as they identify and serve at least one tokenholder as well, and has indicated that it considers anyone who participates in the DAO in any way to be jointly liable for its actions as an unincorporated partnership.
+
+The SEC has [piled](https://www.sec.gov/news/press-release/2023-13) on to Avi Eisenberg adding its own Mango market manipulation charges to those brought by the DoJ and CFTC already.  As of early Feb Eisenberg was [trying](https://www.coindesk.com/policy/2023/02/02/alleged-mango-markets-exploiter-eisenberg-waives-bail-in-first-ny-court-hearing/) to negotiate bail, having been in custody since Dec 26. 
+
+The infamous 3AC co-founders are [attempting](https://vulcanpost.com/814224/three-arrows-capital-seeks-funding-gtx-fill-ftx-void/) a rebirth from the ashes of FTX, seeking funding to set up a company for trading the claims that crypto traders have on bankrupt exchange liquidations. 
+
+DeFi platform Moonwell on the Moonbeam chain has been [figuring](https://forum.moonwell.fi/t/explanation-of-methodology-to-calculate-the-impact-of-mip-14-on-moonwell-users/351) out how to compensate its users after a voter-approved parameter change caused all the collateral on the platform to lose 99.9% of its borrowing power and everyone got liquidated, paying 10% of their position size in penalties. 30% of the liquidation penalties went to a community fund and a proposal will be made to reimburse that portion directly, the other 70% will be covered by Gauntlet, a risk management [partner](https://medium.com/gauntlet-networks/gauntlet-and-moonwell-partner-to-offer-dynamic-risk-management-259856b6146c) of Moonwell.
+
+Reddit has launched some new use cases for MOONs, the /r/cryptocurrency karmic rewards token. Moonplace is a series of 10,000 NFTs which each grant their holder control of a 10x10 array of pixels in a 2d public [space](https://moonplace.io/). After 4 days all the NFTs had been minted, burning 1 million MOONs (worth ~$130,000) and causing a temporary spike in the price of MOONs. The Moonplace NFTs are on the Arbitrum Nova network, an L2 rollup scaling solution for Ethereum.
+
+The first /r/cryptocurrency banner ad was also [sold](https://www.reddit.com/r/CryptoCurrency/comments/10q99w7/elite_darkweb_hacker_group_1inch_just_hacked_the/) for MOONs (worth $3,350), to the 1inch decentralized exchange.
+
+The largest ETH staking pools have been [considering](https://twitter.com/nixorokish/status/1620061177551417349) whether they should limit their further growth to avoid issues of centralization. Rocket Pool is on course to approve a [proposal](https://snapshot.org/#/rocketpool-dao.eth/proposal/0x9e093dea49dee9d1b3e43dbb6e0d8735149c5fde6ef703620970129b81d0f7f8) (RPIP-17) which would enshrine the objective for Rocket Pool to promote "healthy staking", with a couple of mechanisms to limit the growth in its share of pooled ETH staking, of which Rocket Pool currently controls 1.66%. Lido, which controls a much greater share of ETH staking (29%), overwhelmingly [rejected](https://snapshot.org/#/lido-snapshot.eth/proposal/0x10abedcc563b66b1adee60825e78c387105110fa4a1e7354ab57bc9cc1e675c2) a similar kind of proposal in July 2022.
+
+Uniswap's governance has turned into a [clash](https://www.theblock.co/post/207297/uniswap-temperature-check-spurs-feverish-backroom-maneuvering-among-crypto-vc-heavyweights) of VCs as a16z and Jump are both backing their own book in a choice of which bridge to integrate for Binance Smart Chain. Jump is supporting Wormhole, and a16z's horse is LayerZero, but the twist is that a16z are technically unable to participate in the "temperature check" vote to decide which integration is coded up, but have asked that their 15M tokens be counted off the books as voting for LayerZero. Wormhole won the temperature check by 11M votes, so a16z's votes would be enough to change the outcome. Failing that, a16z could attempt to block the deployment of the Wormhole bridge by voting against it in an on chain vote (presuming they will be technically able to).
 
 * Polkadot parachains review of 2022 https://polkadot.network/blog/a-year-in-parachains-part-1-defi/
 
-* Temperature check reveals odd aspects of Uniswap VS governance https://www.theblock.co/post/207297/uniswap-temperature-check-spurs-feverish-backroom-maneuvering-among-crypto-vc-heavyweights
-
-* Interesting comparison between ETH staking pools governance? https://twitter.com/nixorokish/status/1620061177551417349
-
 * Looks a good LN update: https://lightninglabs.substack.com/p/signal-over-noise-how-emerging-markets
-
-* polkadot writing open letters to the SEC explaining why DOT has "morphed" to no longer be a security https://cointelegraph.com/news/polkadot-restates-its-case-that-dot-has-morphed-away-from-security-status
-
-* Update on Avi the trader/manipulator https://www.sec.gov/news/press-release/2023-13
-
-* https://vulcanpost.com/814224/three-arrows-capital-seeks-funding-gtx-fill-ftx-void/
 
 * DAO Drops retrospective public goods funding for Ethereum https://hackmd.io/pXkFyZ8WQA-BGedKeHqHPg?view
 
-* https://forum.moonwell.fi/t/explanation-of-methodology-to-calculate-the-impact-of-mip-14-on-moonwell-users/351 voted parameter change chaos
-
-* There were some stories about weird behaviour on binance smart chain, not sure if newsworthy, e.g https://dirtybubblemedia.substack.com/p/the-binance-scam-chain & https://medium.datadriveninvestor.com/binance-built-a-blockchain-except-it-didnt-5759224ba7aa
+  There were some stories about weird behaviour on binance smart chain, not sure if newsworthy, e.g https://dirtybubblemedia.substack.com/p/the-binance-scam-chain & https://medium.datadriveninvestor.com/binance-built-a-blockchain-except-it-didnt-5759224ba7aa
 
 * Optimism Governance Fund season 3: https://twitter.com/OptimismGov/status/1610426735316848640
 
 * lukedashjr hacked for many BTC https://twitter.com/peterktodd/status/1609655629903265795
 
-* reddit moonplace NFTs launch (https://www.reddit.com/r/CryptoCurrency/comments/10o8g36/1_million_cryptocurrency_moon_have_been_burned_as/), first banner ad sold to 1inch exchange for burning MOONs.
+  
 
   
 
