--- a/journal/202301.md
+++ b/journal/202301.md
@@ -152,7 +152,33 @@ _[DCRDEX](https://github.com/decred/dcrdex) is a non-custodial, privacy-respecti
 
 }
 
-- {}
+Client changes:
+
+- Updated [web dependencies](https://github.com/decred/dcrdex/pull/1996).
+- Updated Docker config: [optimized base images](https://github.com/decred/dcrdex/pull/2030) and switched DEX client to [run as non-root user](https://github.com/decred/dcrdex/pull/2035). This will help to integrate the DEX client into Umbrel.
+- Allow to [acknowledge and hide](https://github.com/decred/dcrdex/pull/2044) the warning to keep the DEX client running until all trades settle.
+
+Client fixes:
+
+- Fixed confusing [sync progress](https://github.com/decred/dcrdex/pull/2008) jumps after disconnecting from all SPV peers.
+- Improved detection and handling of refund transactions that were [broadcast manually](https://github.com/decred/dcrdex/pull/2011) outside of the DEX client.
+- Fixed launch failure on [32-bit systems](https://github.com/decred/dcrdex/pull/2031).
+- Fixed directory paths that blocked built-in SPV wallets created in v0.5 from upgrading in the upcoming v0.6.
+
+Server fixes:
+
+- Avoid a [deadlock](https://github.com/decred/dcrdex/pull/2021) after receiving maker's redeem ack.
+
+Other changes:
+
+- Updated the [Fundamentals](https://github.com/decred/dcrdex/pull/2001) spec page.
+
+Ethereum:
+
+- Removed the [recently added](https://github.com/decred/dcrdex/pull/2047) `authrpc` interface in favor of the unauthenticated `http` and `ws` interfaces. `authrpc` was found to be [unnecessarily limiting](https://github.com/decred/dcrdex/issues/2016#issuecomment-1369091909) by not having methods to inspect the mempool and calculate the most recent balance. At the same time not much was gained from using it in the DEX. For DEX use cases, it makes more sense to connect to Geth with either IPC or `--http` / `--ws`. In the future, authenticated RPC support may still be needed for getting Ethereum data from trusted third party RPC providers. This could greatly simplify testing because running Ethereum full node is [too difficult](https://github.com/decred/dcrdex/pull/2020#discussion_r1081309070).
+- Always check [block header timestamp](https://github.com/decred/dcrdex/pull/2034) to determine sync status. Since Ethereum's "Merge" event, Geth will report the current block and highest block as the same number, so the difference between them can no longer be used to determine sync progress. Instead, DEX will compare last block header time to user's system clock, and if the block is old enough the chain will be assumed as not synced.
+- Improved display of [Maker Redemption](https://github.com/decred/dcrdex/pull/1978) in cases when the exact transaction is not known.
+- Added support for DEX server to connect to Geth over `http` and `ws` interfaces.
 
 
 ### Documentation
@@ -192,6 +218,8 @@ _[Bison Relay](https://github.com/companyzero/bisonrelay) is a new peer-to-peer 
 
 - { What happens when you send a message https://twitter.com/BisonDigest/status/1609882842871500804 - here or in (Media OR Discussions) or in both places? }
 - { check https://twitter.net/BisonDigest for Jan goodies }
+
+Work on the Matrix bridge has started.
 
 
 ### Timestamply
