add some gov stuff

--- a/journal/202301.md
+++ b/journal/202301.md
@@ -245,11 +245,15 @@ Community stats as of {date} (compared to {date}):
 
 { _Hint: Currently this is a mix of finances and governance. We may add the separate Finances section in the future._ }
 
-In January the new [treasury](https://dcrdata.decred.org/treasury) received {n} DCR worth ${} at January's average rate of ${}. {} DCR was spent to pay contractors, worth ${} at January's rate, or ${} at December's billing rate of ${}.
+In January the new [treasury](https://dcrdata.decred.org/treasury) received 8,564 DCR worth $189K at January's average rate of $22.05. 
 
-The [treasury spend tx](https://dcrdata.decred.org/tx/49f141f51421a499d319bc617a4430f87db3a73ffa605dee8408eefb081bd11b) mined on Jan 3 had 24 outputs making payments to contractors for (mostly) the November invoices, ranging from 5 DCR to 1,270 DCR. It was approved by 6,967 votes (all Yes) and voter turnout of 54%, out of the 12,909 tickets that had a chance to participate during the shortened 9-day vote.
+The [treasury spend tx](https://dcrdata.decred.org/tx/49f141f51421a499d319bc617a4430f87db3a73ffa605dee8408eefb081bd11b) mined on Jan 3 had 24 outputs and was reported last month as making payments to contractors for (mostly) the November invoices, ranging from 5 DCR to 1,270 DCR. It was approved by 6,967 votes (all Yes) and voter turnout of 54%, out of the 12,909 tickets that had a chance to participate during the shortened 9-day vote.
 
 { _^ we mentioned this tspend in 202212 but adding here with more detail since it was mined on Jan 3, plus it adds some clarity on the process. actually we have 2 events to report on: tspend published for voting and tspend mined, going forward we can tweak wording to reflect that precisely_ }
+
+The treasury spend tx {in the mempool, enter details near publication} will pay for most of December's invoices.
+
+{} DCR was spent to pay contractors, worth ${} at January's rate, or ${} at December's billing rate of $19.79.
 
 The [treasury spend tx]({}) had {} outputs making payments to contractors, ranging from {} DCR to {} DCR. { _in case we have other tspend activity in Jan, cover it too but specify which event (published for voting or mined) }
 
@@ -259,7 +263,11 @@ As of {date}, combined balance of [legacy](https://dcrdata.decred.org/address/Dc
 
 { _High-level recap of decision-making activity and most important events._ }
 
-- {}
+There were eight proposals published on Politeia in January.
+
+- The [Decred Video Content 2023](https://proposals.decred.org/record/56a439a) proposal requested a budget of $45,600 to continue producing video content, including @Decred Society's "Decred and the state of the market" livestream, @Exitus' News Updates, @Karamble's video/gif animations @Tivra's Twitter spaces. It was approved with 83% Yes votes and 55% turnout.
+- The [Decred Arabia Communications and Content 2023](https://proposals.decred.org/record/5b975ba) proposal requested a budget of $13,000 to continue the team's efforts for another year, it was approved with 75% Yes votes and 49% turnout.
+- The [DCRDEX integration on Umbrel](https://proposals.decred.org/record/8d83046) proposal requested a budget of $1,960 to integrate DCRDEX with Umbrel, a remote server admin suite, making it much easier for Umbrel users to install DCRDEX. The proposal was approved with 84% Yes votes and 47% turnout.
 
 { _Check https://github.com/decredcommunity/proposals/commits/master for updates._ }
 
