--- a/journal/202301.md
+++ b/journal/202301.md
@@ -162,7 +162,8 @@ _[dcrdocs](https://github.com/decred/dcrdocs) is the source code for Decred [use
 
 { _Check_ https://github.com/decred/dcrdocs/commits/master }
 
-- {}
+- Various [typo corrections](https://github.com/decred/dcrdocs/pull/1213).
+- Added [on-chain governance and Politeia paragraphs](https://github.com/decred/dcrdocs/pull/1212) to history documentation. Also added timeline points.
 
 
 ### decred.org
