--- a/journal/202301.md
+++ b/journal/202301.md
@@ -380,7 +380,11 @@ Secured the following media placements:
 
 { _Add links to text posts on DM when available for the videos_ }
 
-- {}
+- [Bison Relay updates to version 0.1.3](https://youtu.be/EWNW91_rp1w) by @PhoenixGreen
+- [SlateCast #49: Combining proof of work & proof of stake in DeFi with Decred](https://youtu.be/VYDPCbb5VhE) by @CryptoSlate feat @jy-p
+- [Bison Relay - Manage Content](https://youtu.be/1gNc_DLCddc) by @PhoenixGreen
+- [Built-in Payment System - Bison Relay](https://youtu.be/aZvnd5BvEBs) by @PhoenixGreen
+- [Bison Relay 0.1 News Feed - Connecting, creating and using markdown](https://youtu.be/NuKVAp4fIBY) by @PhoenixGreen
 
 **Audio:**
 
@@ -388,7 +392,7 @@ Secured the following media placements:
 
 **Art and fun:**
 
-- {}
+- [Bison Relay TikTok promo](https://twitter.com/exitusdcr/status/1620123207251681280)
 
 **Translations:**
 
